// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/date-picker/demo/basic.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-label ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-label"
        >
          日期框
        </div>
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select date
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select month
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    tabindex="0"
  >
    <span
      class="ant-calendar-range-picker"
    >
      <span
        class="ant-calendar-picker-input ant-input"
      >
        <input
          class="ant-calendar-range-picker-input"
          placeholder="Start date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <span
          class="ant-calendar-range-picker-separator"
        >
           ~ 
        </span>
        <input
          class="ant-calendar-range-picker-input"
          placeholder="End date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <i
          class="icon icon-date_range ant-calendar-picker-icon"
        />
      </span>
      <div
        class="ant-calendar-underline"
      >
        <span
          class="ant-calendar-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-label ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-label"
        >
          选择周
        </div>
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select week
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/date-render.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select date
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <span
    class="ant-calendar-picker"
    tabindex="0"
  >
    <span
      class="ant-calendar-range-picker"
    >
      <span
        class="ant-calendar-picker-input ant-input"
      >
        <input
          class="ant-calendar-range-picker-input"
          placeholder="Start date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <span
          class="ant-calendar-range-picker-separator"
        >
           ~ 
        </span>
        <input
          class="ant-calendar-range-picker-input"
          placeholder="End date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <i
          class="icon icon-date_range ant-calendar-picker-icon"
        />
      </span>
      <div
        class="ant-calendar-underline"
      >
        <span
          class="ant-calendar-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/disabled.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-disabled ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select date
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input ant-input-disabled"
              disabled=""
              readonly=""
              type="text"
              value="2015-06-06"
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-disabled ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select date
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input ant-input-disabled"
              disabled=""
              readonly=""
              type="text"
              value="2015-06"
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    tabindex="-1"
  >
    <span
      class="ant-calendar-range-picker"
    >
      <span
        class="ant-calendar-picker-input ant-input ant-input-disabled"
      >
        <input
          class="ant-calendar-range-picker-input"
          disabled=""
          placeholder="Start date"
          readonly=""
          tabindex="-1"
          value="2015-06-06"
        />
        <span
          class="ant-calendar-range-picker-separator"
        >
           ~ 
        </span>
        <input
          class="ant-calendar-range-picker-input"
          disabled=""
          placeholder="End date"
          readonly=""
          tabindex="-1"
          value="2015-06-06"
        />
        <i
          class="icon icon-date_range ant-calendar-picker-icon"
        />
      </span>
      <div
        class="ant-calendar-underline"
      >
        <span
          class="ant-calendar-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/disabled-date.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select date
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select month
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    style="width:350px"
    tabindex="0"
  >
    <span
      class="ant-calendar-range-picker"
    >
      <span
        class="ant-calendar-picker-input ant-input"
      >
        <input
          class="ant-calendar-range-picker-input"
          placeholder="Start date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <span
          class="ant-calendar-range-picker-separator"
        >
           ~ 
        </span>
        <input
          class="ant-calendar-range-picker-input"
          placeholder="End date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <i
          class="icon icon-date_range ant-calendar-picker-icon"
        />
      </span>
      <div
        class="ant-calendar-underline"
      >
        <span
          class="ant-calendar-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/extra-footer.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select date
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select date
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <span
    class="ant-calendar-picker"
    tabindex="0"
  >
    <span
      class="ant-calendar-range-picker"
    >
      <span
        class="ant-calendar-picker-input ant-input"
      >
        <input
          class="ant-calendar-range-picker-input"
          placeholder="Start date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <span
          class="ant-calendar-range-picker-separator"
        >
           ~ 
        </span>
        <input
          class="ant-calendar-range-picker-input"
          placeholder="End date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <i
          class="icon icon-date_range ant-calendar-picker-icon"
        />
      </span>
      <div
        class="ant-calendar-underline"
      >
        <span
          class="ant-calendar-ripple"
        />
      </div>
    </span>
  </span>
  <span
    class="ant-calendar-picker"
    style="width:350px"
    tabindex="0"
  >
    <span
      class="ant-calendar-range-picker"
    >
      <span
        class="ant-calendar-picker-input ant-input"
      >
        <input
          class="ant-calendar-range-picker-input"
          placeholder="Start date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <span
          class="ant-calendar-range-picker-separator"
        >
           ~ 
        </span>
        <input
          class="ant-calendar-range-picker-input"
          placeholder="End date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <i
          class="icon icon-date_range ant-calendar-picker-icon"
        />
      </span>
      <div
        class="ant-calendar-underline"
      >
        <span
          class="ant-calendar-ripple"
        />
      </div>
    </span>
  </span>
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select month
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/format.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select date
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value="2015/01/01"
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:42px"
            >
              <button
                class="ant-btn ant-calendar-picker-clear ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
                type="button"
              >
                <i
                  class="icon icon-close"
                />
                <div
                  class="ant-ripple-wrapper"
                />
              </button>
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select date
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value="2015/01"
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:42px"
            >
              <button
                class="ant-btn ant-calendar-picker-clear ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
                type="button"
              >
                <i
                  class="icon icon-close"
                />
                <div
                  class="ant-ripple-wrapper"
                />
              </button>
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    tabindex="0"
  >
    <span
      class="ant-calendar-range-picker"
    >
      <span
        class="ant-calendar-picker-input ant-input"
      >
        <input
          class="ant-calendar-range-picker-input"
          placeholder="Start date"
          readonly=""
          tabindex="-1"
          value="2015/01/01"
        />
        <span
          class="ant-calendar-range-picker-separator"
        >
           ~ 
        </span>
        <input
          class="ant-calendar-range-picker-input"
          placeholder="End date"
          readonly=""
          tabindex="-1"
          value="2015/01/01"
        />
        <button
          class="ant-btn ant-calendar-picker-clear ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
          type="button"
        >
          <i
            class="icon icon-close"
          />
          <div
            class="ant-ripple-wrapper"
          />
        </button>
        <i
          class="icon icon-date_range ant-calendar-picker-icon"
        />
      </span>
      <div
        class="ant-calendar-underline"
      >
        <span
          class="ant-calendar-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/mode.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select date
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    tabindex="0"
  >
    <span
      class="ant-calendar-range-picker"
    >
      <span
        class="ant-calendar-picker-input ant-input"
      >
        <input
          class="ant-calendar-range-picker-input"
          placeholder="Start month"
          readonly=""
          tabindex="-1"
          value=""
        />
        <span
          class="ant-calendar-range-picker-separator"
        >
           ~ 
        </span>
        <input
          class="ant-calendar-range-picker-input"
          placeholder="End month"
          readonly=""
          tabindex="-1"
          value=""
        />
        <i
          class="icon icon-date_range ant-calendar-picker-icon"
        />
      </span>
      <div
        class="ant-calendar-underline"
      >
        <span
          class="ant-calendar-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/presetted-ranges.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
    tabindex="0"
  >
    <span
      class="ant-calendar-range-picker"
    >
      <span
        class="ant-calendar-picker-input ant-input"
      >
        <input
          class="ant-calendar-range-picker-input"
          placeholder="Start date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <span
          class="ant-calendar-range-picker-separator"
        >
           ~ 
        </span>
        <input
          class="ant-calendar-range-picker-input"
          placeholder="End date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <i
          class="icon icon-date_range ant-calendar-picker-icon"
        />
      </span>
      <div
        class="ant-calendar-underline"
      >
        <span
          class="ant-calendar-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    style="width:350px"
    tabindex="0"
  >
    <span
      class="ant-calendar-range-picker"
    >
      <span
        class="ant-calendar-picker-input ant-input"
      >
        <input
          class="ant-calendar-range-picker-input"
          placeholder="Start date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <span
          class="ant-calendar-range-picker-separator"
        >
           ~ 
        </span>
        <input
          class="ant-calendar-range-picker-input"
          placeholder="End date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <i
          class="icon icon-date_range ant-calendar-picker-icon"
        />
      </span>
      <div
        class="ant-calendar-underline"
      >
        <span
          class="ant-calendar-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group-wrapper"
  >
    <div
      class="ant-radio-group"
    >
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="large"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Large
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
            value="default"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Default
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="small"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Small
        </span>
      </label>
    </div>
  </div>
  <br />
  <br />
  <span
    class="ant-calendar-picker ant-calendar-picker-default"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select date
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker ant-calendar-picker-default"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select Month
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker ant-calendar-picker-default"
    tabindex="0"
  >
    <span
      class="ant-calendar-range-picker"
    >
      <span
        class="ant-calendar-picker-input ant-input"
      >
        <input
          class="ant-calendar-range-picker-input"
          placeholder="Start date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <span
          class="ant-calendar-range-picker-separator"
        >
           ~ 
        </span>
        <input
          class="ant-calendar-range-picker-input"
          placeholder="End date"
          readonly=""
          tabindex="-1"
          value=""
        />
        <i
          class="icon icon-date_range ant-calendar-picker-icon"
        />
      </span>
      <div
        class="ant-calendar-underline"
      >
        <span
          class="ant-calendar-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker ant-calendar-picker-default"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select Week
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/start-end.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Start
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              End
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/time.md correctly 1`] = `
<div>
  <span
    class="ant-calendar-picker"
  >
    <span
      class="ant-input-wrapper ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            >
              Select Time
            </div>
            <input
              class="ant-input ant-calendar-picker-input ant-input"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-calendar-picker-icon-wrapper"
              style="min-width:18px"
            >
              <i
                class="icon icon-date_range ant-calendar-picker-icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="ant-calendar-picker"
    style="width:350px"
    tabindex="0"
  >
    <span
      class="ant-calendar-range-picker"
    >
      <span
        class="ant-calendar-picker-input ant-input"
      >
        <input
          class="ant-calendar-range-picker-input"
          placeholder="Start Time"
          readonly=""
          tabindex="-1"
          value=""
        />
        <span
          class="ant-calendar-range-picker-separator"
        >
           ~ 
        </span>
        <input
          class="ant-calendar-range-picker-input"
          placeholder="End Time"
          readonly=""
          tabindex="-1"
          value=""
        />
        <i
          class="icon icon-date_range ant-calendar-picker-icon"
        />
      </span>
      <div
        class="ant-calendar-underline"
      >
        <span
          class="ant-calendar-ripple"
        />
      </div>
    </span>
  </span>
</div>
`;
